syntax = "proto3";

option go_package = "github.com/XWS-Dislinkt-Team-41/dislinkt-backend/microservices/common/auth";

package auth;

import "google/api/annotations.proto";

service AuthService{
        rpc Login(LoginRequest) returns (JWTResponse) {
                option (google.api.http) = {
                        post: "/auth/login",
                        body: "user"
                    };
        }
        rpc Register(RegisterRequest) returns (RegisterResponse) {}
        rpc RBAC(RBACRequest) returns (RBACResponse) {}
}

message LoginRequest {
        UserCredential user = 1; 
}
            
message RegisterRequest { 
        UserCredential user = 1; 
}

message RBACRequest { 
        UserCredential user = 1; 
        Permission permission = 2;
}

message RegisterResponse {
        UserCredential user = 1; 
}
              
message JWTResponse {
        string token = 1;
}

message RBACResponse {
        bool response = 1;
}
            
message UserCredential {
        string username = 1;
        string password = 2;
}

message Permission {
        string role = 1;
        string method = 2;
        string url = 3;
}